--- a/package.json
+++ b/package.json
@@ -2,12 +2,12 @@
   "type": "module",
   "dependencies": {
     "inquirer": "^9.2.11",
-    "qr-image": "^3.2.0"
+    "qr-image": "^3.2.0",
+    "qrcode": "^1.5.3"
   },
   "name": "2.4-qr-code-project",
   "version": "1.0.0",
   "main": "index.js",
-  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
