--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
   "type": "module",
   "dependencies": {
-    "inquirer": "^9.2.11",
+    "fs": "^0.0.1-security",
+    "inquirer": "^9.2.12",
+    "nodemon": "^3.0.2",
     "qr-image": "^3.2.0",
-    "qrcode": "^1.5.3"
+    "qrcode": "^1.5.3",
+    "readline": "^1.3.0"
   },
   "name": "2.4-qr-code-project",
   "version": "1.0.0",
@@ -14,5 +17,6 @@
   "keywords": [],
   "author": "Sarim",
   "license": "ISC",
+  "devDependencies": {},
   "description": ""
 }
